Add comprehensive vLLM and Ollama distribution documentation
- Created detailed vLLM distribution guide with GPU/CPU variants, configuration examples, and best practices
- Created comprehensive Ollama distribution guide with model management, API usage, and troubleshooting
- Added new 'Distributions' section to navigation with dedicated pages for each distribution type
- Includes production and development examples, resource planning, and scaling strategies
- Clearly distinguishes supported distributions from BYO (bring-your-own) custom image approaches

Signed-off-by: Adel Zaalouk <azaalouk@redhat.com>

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -41,7 +41,16 @@ nav:
   - Getting Started:
     - Installation: getting-started/installation.md
     - Quick Start: getting-started/quick-start.md
+    - Understanding Distributions: getting-started/distributions.md
     - Configuration: getting-started/configuration.md
+  - Distributions:
+    - Starter: distributions/starter.md
+    - vLLM: distributions/vllm.md
+    - Ollama: distributions/ollama.md
+    - AWS Bedrock: distributions/bedrock.md
+    - Text Generation Inference: distributions/tgi.md
+    - Together AI: distributions/together.md
+    - Bring Your Own: distributions/bring-your-own.md
   - How-to Guides:
     - Deploy LlamaStack: how-to/deploy-llamastack.md
     - Configure Storage: how-to/configure-storage.md
